load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:pkg.bzl", "pkg_deb")
load("@rules_pkg//pkg:rpm.bzl", "pkg_rpm")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//:version.bzl", "VERSION")
load("//third_party/bazel:archs.bzl", "LINUX_ARCHES")
load("//third_party/bazel:multiarch_go_binary.bzl", "multiarch_go_binary")

go_library(
    name = "patchbase-server_lib",
    srcs = ["main.go"],
    importpath = "go.patchbase.net/server/cmd/patchbase-server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/cli",
        "@org_golang_x_crypto_x509roots_fallback//:fallback",
    ],
)

go_binary(
    name = "patchbase-server",
    embed = [":patchbase-server_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "go.patchbase.net/server/internal/buildinfo.Version": VERSION,
    },
)

multiarch_go_binary(
    name = "patchbase-server_linux",
    embed = [":patchbase-server_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "go.patchbase.net/server/internal/buildinfo.Version": VERSION,
    },
)

BACKEND_VERSION = VERSION[1:] if VERSION.startswith("v") else VERSION

[
    pkg_files(
        name = "rpm_files_{name}".format(name = arch["name"]),
        srcs = [
            ":patchbase-server_linux_{name}".format(name = arch["name"]),
            "//:config_example",
            "//packaging:patchbase-server.service",
        ],
        renames = {
            ":patchbase-server_linux_{name}".format(name = arch["name"]): "patchbase-server",
            "//:config_example": "config.example.yaml",
            "//packaging:patchbase-server.service": "patchbase-server.service",
        },
        tags = ["manual"],
    )
    for arch in LINUX_ARCHES
]

[
    pkg_files(
        name = "deb_metadata_{name}".format(name = arch["name"]),
        srcs = [
            "//:config_example",
            "//packaging:patchbase-server.service",
        ],
        attributes = pkg_attributes(
            mode = "0644",
        ),
        renames = {
            "//:config_example": "/etc/patchbase-server/config.example.yaml",
            "//packaging:patchbase-server.service": "/lib/systemd/system/patchbase-server.service",
        },
        tags = ["manual"],
    )
    for arch in LINUX_ARCHES
]

[
    pkg_files(
        name = "deb_binary_{name}".format(name = arch["name"]),
        srcs = [
            ":patchbase-server_linux_{name}".format(name = arch["name"]),
        ],
        attributes = pkg_attributes(
            mode = "0755",
        ),
        renames = {
            ":patchbase-server_linux_{name}".format(name = arch["name"]): "/usr/bin/patchbase-server",
        },
        tags = ["manual"],
    )
    for arch in LINUX_ARCHES
]

[
    pkg_tar(
        name = "archive_{name}".format(name = arch["name"]),
        srcs = [
            ":rpm_files_{name}".format(name = arch["name"]),
        ],
        extension = "tar.gz",
        tags = ["manual"],
    )
    for arch in LINUX_ARCHES
]

[
    pkg_tar(
        name = "deb_data_{name}".format(name = arch["name"]),
        srcs = [
            ":deb_binary_{name}".format(name = arch["name"]),
            ":deb_metadata_{name}".format(name = arch["name"]),
        ],
        empty_dirs = [
            "/etc/patchbase-server",
            "/var/lib/patchbase-server",
        ],
        tags = ["manual"],
    )
    for arch in LINUX_ARCHES
]

[
    genrule(
        name = "patchbase-server_spec_{name}".format(name = arch["name"]),
        srcs = ["//packaging:patchbase-server.spec"],
        outs = ["patchbase-server_{name}.spec".format(name = arch["name"])],
        cmd = "sed 's|@@ARCHIVE_PATH@@|bazel-out/k8-fastbuild/bin/cmd/patchbase-server/archive_{name}.tar.gz|g' $(location //packaging:patchbase-server.spec) > $@".format(name = arch["name"]),
        tags = ["manual"],
    )
    for arch in LINUX_ARCHES
]

[
    pkg_rpm(
        name = "patchbase-server-{name}".format(name = arch["name"]),
        architecture = arch["name"],
        data = [
            ":archive_{name}".format(name = arch["name"]),
        ],
        release = "1",
        spec_file = ":patchbase-server_spec_{name}".format(name = arch["name"]),
        tags = ["manual"],
        version = BACKEND_VERSION,
        visibility = ["//visibility:public"],
    )
    for arch in LINUX_ARCHES
]

[
    pkg_deb(
        name = "patchbase-server-deb-{name}".format(name = arch["name"]),
        architecture = arch["goarch"],
        data = ":deb_data_{name}".format(name = arch["name"]),
        depends = [
            "systemd",
        ],
        description = "PatchBase server is the backend service for PatchBase.",
        maintainer = "Toni Pripoae <toni@patchbase.net>",
        out = "patchbase-server_{arch}.deb".format(arch = arch["goarch"]),
        package = "patchbase-server",
        package_file_name = "patchbase-server_{version}-1_{arch}.deb".format(
            arch = arch["goarch"],
            version = BACKEND_VERSION,
        ),
        postinst = "//packaging:patchbase-server.postinst",
        postrm = "//packaging:patchbase-server.postrm",
        priority = "optional",
        section = "admin",
        tags = ["manual"],
        version = BACKEND_VERSION,
        visibility = ["//visibility:public"],
    )
    for arch in LINUX_ARCHES
]
