load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "di",
    srcs = ["injector.go"],
    importpath = "go.patchbase.net/server/internal/di",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api",
        "//internal/api/auth",
        "//internal/config",
        "//internal/events",
        "//internal/mailer",
        "//internal/queue",
        "//internal/services",
        "//internal/services/matchers",
        "//internal/sql",
        "//internal/utils",
        "//internal/ws",
        "@com_github_samber_do_v2//:do",
    ],
)
