load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "migrations",
    srcs = ["migrate.go"],
    embedsrcs = [
        "files/001_add_settings.sql",
        "files/002_add_users.sql",
        "files/003_add_hosts.sql",
        "files/004_create_host_ssh_pull.sql",
        "files/005_add_host_ssh_pull_jobs.sql",
        "files/006_advisory_scopes.sql",
        "files/007_add_onboarded_to_host_ssh_pull.sql",
        "files/008_add_matcher_tables.sql",
        "files/009_add_advisory_references_cve_idx.sql",
        "files/010_add_manual_onboarding.sql",
        "files/011_add_pull_hostname_to_host_ssh_pull.sql",
        "files/012_dedupe_decision_records.sql",
        "files/013_add_default_ssh_pull_user_setting.sql",
        "files/014_backfill_ubuntu_severities.sql",
        "files/015_add_ask_to_copy_public_key_setting.sql",
        "files/016_add_host_unique_constraints.sql",
        "files/017_add_audit_log.sql",
        "files/018_add_registration_token_auto_approve.sql",
        "files/019_add_host_notes.sql",
    ],
    importpath = "go.patchbase.net/server/internal/migrations",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_jackc_pgx_v5//stdlib",
        "@com_github_pressly_goose_v3//:goose",
        "@com_github_riverqueue_river//rivermigrate",
        "@com_github_riverqueue_river_riverdriver_riverdatabasesql//:riverdatabasesql",
    ],
)
