load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "queue",
    srcs = [
        "noop_worker.go",
        "river.go",
        "ssh_pull_worker.go",
    ],
    importpath = "go.patchbase.net/server/internal/queue",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/services",
        "//internal/sql",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_riverqueue_river//:river",
        "@com_github_riverqueue_river_riverdriver_riverpgxv5//:riverpgxv5",
        "@com_github_samber_do_v2//:do",
    ],
)

go_test(
    name = "ssh_pull_worker_test",
    srcs = ["ssh_pull_worker_test.go"],
    deps = [
        ":queue",
        "//internal/services",
        "@com_github_riverqueue_river//:river",
        "@com_github_samber_do_v2//:do",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
