load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sql",
    srcs = [
        "advisories.sql.go",
        "advisory_product_streams.sql.go",
        "advisory_references.sql.go",
        "advisory_scopes.sql.go",
        "affected_package_rules.sql.go",
        "db.go",
        "decision_records.sql.go",
        "extra.go",
        "fixed_packages.sql.go",
        "host_access_tokens.sql.go",
        "host_snapshots.sql.go",
        "host_ssh_pull_jobs.sql.go",
        "hosts.sql.go",
        "injector.go",
        "models.go",
        "product_streams.sql.go",
        "querier.go",
        "registration_tokens.sql.go",
        "settings.sql.go",
        "users.sql.go",
    ],
    importpath = "go.patchbase.net/server/internal/sql",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/utils",
        "@com_github_jackc_pgerrcode//:pgerrcode",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgconn",
        "@com_github_jackc_pgx_v5//pgtype",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_samber_do_v2//:do",
    ],
)
