load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utils",
    srcs = [
        "collections.go",
        "crypto.go",
        "log.go",
        "option.go",
        "password.go",
        "random.go",
        "ssh.go",
        "strings.go",
    ],
    importpath = "go.patchbase.net/server/internal/utils",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "@com_github_samber_do_v2//:do",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_x_crypto//bcrypt",
        "@org_golang_x_crypto//ssh",
    ],
)

go_test(
    name = "collections_test",
    size = "small",
    srcs = ["collections_test.go"],
    embed = [":utils"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "option_test",
    size = "small",
    srcs = ["option_test.go"],
    embed = [":utils"],
    deps = ["@com_github_stretchr_testify//require"],
)

go_test(
    name = "password_test",
    size = "small",
    srcs = ["password_test.go"],
    embed = [":utils"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "crypto_test",
    size = "small",
    srcs = ["crypto_test.go"],
    deps = [
        ":utils",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
