load("@bazel_gazelle//:def.bzl", "gazelle")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_proto_grpc_go//:defs.bzl", "go_proto_compile")

# gazelle:prefix go.patchbase.net/proto/agent
# gazelle:proto disable
# gazelle:go_test file

gazelle(
    name = "gazelle",
)

proto_library(
    name = "agent_proto",
    srcs = glob(["*.proto"]),
    import_prefix = "patchbase/agent",
    strip_import_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_compile(
    name = "agent_go",
    options = {
        "*": [
            "paths=source_relative",
        ],
    },
    protos = [":agent_proto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "agent",
    srcs = [
        "common.pb.go",
        "host.pb.go",
        "package.pb.go",
        "repo.pb.go",
        "runtime.pb.go",
        "snapshot.pb.go",
    ],
    importpath = "go.patchbase.net/proto/agent",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
