load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//:version.bzl", "VERSION")
load("//third_party/bazel:multiarch_go_binary.bzl", "multiarch_go_binary")

go_library(
    name = "patchbase-agent_lib",
    srcs = ["main.go"],
    importpath = "go.patchbase.net/agent/cmd/patchbase-agent",
    visibility = ["//visibility:private"],
    deps = ["//agent/internal/cli"],
)

go_binary(
    name = "patchbase-agent",
    embed = [":patchbase-agent_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "go.patchbase.net/agent/internal/cli.version": VERSION,
    },
)

multiarch_go_binary(
    name = "patchbase-agent_linux",
    embed = [":patchbase-agent_lib"],
    x_defs = {
        "go.patchbase.net/agent/internal/cli.version": VERSION,
    },
)
