load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("@rules_pkg//pkg:rpm.bzl", "pkg_rpm")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//:version.bzl", "VERSION")
load("//third_party/bazel:archs.bzl", "LINUX_ARCHES")
load("//third_party/bazel:multiarch_go_binary.bzl", "multiarch_go_binary")

go_library(
    name = "patchbase-agent_lib",
    srcs = ["main.go"],
    importpath = "go.patchbase.net/agent/cmd/patchbase-agent",
    visibility = ["//visibility:private"],
    deps = ["//agent/internal/cli"],
)

go_binary(
    name = "patchbase-agent",
    embed = [":patchbase-agent_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "go.patchbase.net/agent/internal/cli.version": VERSION,
    },
)

multiarch_go_binary(
    name = "patchbase-agent_linux",
    embed = [":patchbase-agent_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "go.patchbase.net/agent/internal/cli.version": VERSION,
    },
)

AGENT_VERSION = VERSION[1:] if VERSION.startswith("v") else VERSION

[
    pkg_files(
        name = "rpm_files_{name}".format(name = arch["name"]),
        srcs = [
            ":patchbase-agent_linux_{name}".format(name = arch["name"]),
            "//packaging:patchbase-agent.service",
            "//packaging:patchbase-agent.timer",
        ],
        renames = {
            ":patchbase-agent_linux_{name}".format(name = arch["name"]): "patchbase-agent",
            "//packaging:patchbase-agent.service": "patchbase-agent.service",
            "//packaging:patchbase-agent.timer": "patchbase-agent.timer",
        },
        tags = ["manual"],
    )
    for arch in LINUX_ARCHES
]

[
    pkg_tar(
        name = "archive_{name}".format(name = arch["name"]),
        srcs = [
            ":rpm_files_{name}".format(name = arch["name"]),
        ],
        extension = "tar.gz",
        tags = ["manual"],
    )
    for arch in LINUX_ARCHES
]

[
    genrule(
        name = "patchbase-agent_spec_{name}".format(name = arch["name"]),
        srcs = ["//packaging:patchbase-agent.spec"],
        outs = ["patchbase-agent_{name}.spec".format(name = arch["name"])],
        cmd = "sed 's|@@ARCHIVE_PATH@@|bazel-out/k8-fastbuild/bin/agent/cmd/patchbase-agent/archive_{name}.tar.gz|g' $(location //packaging:patchbase-agent.spec) > $@".format(name = arch["name"]),
        tags = ["manual"],
    )
    for arch in LINUX_ARCHES
]

[
    pkg_rpm(
        name = "patchbase-agent-{name}".format(name = arch["name"]),
        architecture = arch["name"],
        data = [
            ":archive_{name}".format(name = arch["name"]),
        ],
        release = "1",
        spec_file = ":patchbase-agent_spec_{name}".format(name = arch["name"]),
        tags = ["manual"],
        version = AGENT_VERSION,
        visibility = ["//visibility:public"],
    )
    for arch in LINUX_ARCHES
]
