load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = ["http.go"],
    importpath = "go.patchbase.net/agent/internal/client",
    visibility = ["//agent:__subpackages__"],
    deps = [
        "//proto/agent",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "http_test",
    size = "small",
    srcs = ["http_test.go"],
    embed = [":client"],
    deps = ["@com_github_stretchr_testify//assert"],
)
