load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "collector",
    srcs = [
        "packages.go",
        "repos.go",
        "snapshot.go",
        "system.go",
    ],
    importpath = "go.patchbase.net/agent/internal/collector",
    visibility = ["//agent:__subpackages__"],
    deps = [
        "//proto/agent",
        "@com_github_spf13_afero//:afero",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "packages_test",
    size = "small",
    srcs = ["packages_test.go"],
    embed = [":collector"],
    deps = [
        "//proto/agent",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "repos_test",
    size = "small",
    srcs = ["repos_test.go"],
    embed = [":collector"],
    deps = [
        "//proto/agent",
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "snapshot_test",
    size = "small",
    srcs = ["snapshot_test.go"],
    embed = [":collector"],
    deps = [
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "system_test",
    size = "small",
    srcs = ["system_test.go"],
    embed = [":collector"],
    deps = [
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
